--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'your-azure-webapp-name'
+        app-name: 'webapplicationforgithub'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
